# DH-DigitalHelper

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml  flake.nix  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: analysis.html
docs/: corpus-audit-2026-07-17.md
docs/superpowers/plans/: 2026-07-14-dhbw-dual-site-scraper.md  2026-07-14-new-only-recheck-mode.md  2026-07-17-metadata-backfill.md  2026-07-17-repo-layout-flatten.md  2026-07-17-standort-studienabteilung-enrichment.md
docs/superpowers/specs/: 2026-07-14-dhbw-dual-site-scraper-design.md  2026-07-14-new-only-recheck-mode-design.md  2026-07-16-scraper-correctness-fixes-design.md  2026-07-17-metadata-backfill-design.md  2026-07-17-repo-layout-flatten-design.md  2026-07-17-standort-studienabteilung-enrichment-design.md
graphify-out/cache/: stat-index.json
rust/: Cargo.toml
rust/src/: crawl.rs  fetch.rs  links.rs  outcome.rs  progress.rs  sitemap.rs  storage.rs  writer.rs
rust/tests/: links_parity.rs  orchestration.rs  sitemap_parity.rs
scripts/: backfill_classification.py  dev-env.ps1  install.ps1
src/dhbw_scraper/: crawl.py  dashboard.py  extract.py  html_extract.py  markdown.py  pdf_extract.py  progress.py  quality.py  storage.py
src/graphify-out/: .graphify_analysis.json  graph.json  manifest.json
src/graphify-out/cache/: stat-index.json
src/scrape-engine/: backfill.rs  config.rs  crawl.rs  fetch.rs  lib.rs  links.rs  outcome.rs  progress.rs  sitemap.rs  storage.rs  writer.rs
src/scraper/: chromaDB.py  chunk.py  classify.py  cli.py  config.py  crawl.py  dashboard.py  embedding.py  extract.py  fetch.py  html_extract.py  lang.py  markdown.py  pdf_extract.py  pdf_title.py  progress.py  quality.py  storage.py  taxonomy.py
tests/: test_backfill.py  test_backfill_classification.py  test_chunk.py  test_classify.py  test_classify_standort.py  test_cli.py  test_config.py  test_dashboard.py  test_dedup.py  test_embedding.py  test_engine_run_fetch.py  test_extract.py  test_fetch.py  test_html_extract.py  test_lang.py  test_native_run_fetch.py  test_pdf_extract.py  test_pdf_title.py  test_progress.py  test_quality.py  test_storage_classification.py  test_storage_docs.py  test_storage_queue.py  test_storage_taxonomy.py  test_taxonomy.py
tests/fixtures/: sample.html
tests/scrape-engine/: backfill.rs  links_parity.rs  orchestration.rs  sitemap_parity.rs
