[package]
name = "dhbw_scraper_native"
version = "0.3.0"
edition = "2021"
publish = false
# Integration tests live in tests/scrape-engine/, which Cargo's autodiscovery
# (tests/*.rs, tests/*/main.rs) does not match — they are declared explicitly
# below. tests/ is shared with pytest; cargo ignores the .py files.
autotests = false

[lib]
name = "_native"
path = "src/scrape-engine/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "backfill"
path = "tests/scrape-engine/backfill.rs"

[[test]]
name = "links_parity"
path = "tests/scrape-engine/links_parity.rs"

[[test]]
name = "orchestration"
path = "tests/scrape-engine/orchestration.rs"

[[test]]
name = "sitemap_parity"
path = "tests/scrape-engine/sitemap_parity.rs"

[dependencies]
# NOTE: `extension-module` is intentionally NOT enabled here. It tells pyo3 not
# to link libpython, which is correct for the wheel (the host CPython provides
# the symbols) but breaks `cargo test`, whose test binaries must link libpython.
# maturin turns it on for wheel/develop builds via [tool.maturin] features in
# pyproject.toml.
pyo3 = { version = "0.29", features = ["abi3-py313"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Pinned to 0.12: reqwest 0.13 switched the default rustls provider to aws-lc-rs,
# which needs NASM/CMake to build on Windows — the native-build pain rustls was
# chosen to avoid. 0.12's `rustls-tls-native-roots` uses ring (pure build) and
# trusts the OS cert store.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "gzip",
    "brotli",
    "deflate",
] }
url = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.11"
tl = "0.7"
regex = "1"
percent-encoding = "2"
# Sitemaps are commonly published as `.xml.gz`. reqwest's `gzip` feature only
# handles Content-Encoding, not a body whose payload IS a gzip member, so we
# inflate those ourselves (see sitemap::decode_xml).
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
flate2 = "1"

[profile.release]
opt-level = 3
