[project]
name = "dhbw-scraper"
version = "0.2.0"
description = "Incremental dual-site scraper + extractor for DHBW content (RAG stage 1)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "trafilatura>=2.1.0",
    # PyMuPDF4LLM converts PDF bytes -> Markdown. It is lightweight (no torch,
    # no ML models) and pulls in pymupdf transitively.
    "pymupdf4llm>=0.3.4",
]

[project.scripts]
dhbw-scraper = "scraper.cli:main"

[project.optional-dependencies]
# pre-commit drives the git hooks (lint/format on commit, Conventional-Commit
# validation, tests on push) declared in .pre-commit-config.yaml. `ruff` is pinned
# here too so CI's `uv run ruff …` steps resolve the SAME version the
# `ruff-pre-commit` hook manages (rev v0.8.6) — bump both in lockstep or the two
# ruffs can format the corpus differently.
dev = ["pytest>=9.0", "maturin>=1.7,<2", "pre-commit>=4", "ruff==0.8.6"]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
# Mixed Rust/Python layout, one source root: the pure-Python package tree stays
# authoritative under src/scraper/, and the Rust crate at src/scrape-engine/ is
# injected as the single submodule scraper._engine. The Rust is a SIBLING of the
# package, not nested inside it — anything under the package dir is the wheel
# payload and would ship .rs files into site-packages.
python-source = "src"
module-name = "scraper._engine"
features = ["pyo3/extension-module"]

# Ruff's formatter (and linter) auto-discover this section from pyproject.toml no
# matter how ruff is invoked — the pre-commit `ruff-format` hook, CI's
# `ruff format --check`, or a bare `ruff format` — so every entry point produces
# byte-for-byte identical output. Every value below equals ruff's current default;
# they are pinned so an upstream default change can never silently reflow the corpus.
[tool.ruff]
line-length = 88
# target-version is deliberately unset: ruff infers it from the single source of
# truth, project.requires-python (>=3.14). Pinning it here would add a second
# Python-version knob that could drift out of sync with requires-python.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"          # per-file detection — friendly to the Windows + NixOS split
skip-magic-trailing-comma = false
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["tests"]
