[project]
name = "dhbw-scraper"
version = "0.2.0"
description = "Incremental dual-site scraper + extractor for DHBW content (RAG stage 1)"
requires-python = ">=3.14"
dependencies = [
    "trafilatura>=2.1.0",
    # PyMuPDF4LLM converts PDF bytes -> Markdown. It is lightweight (no torch,
    # no ML models) and pulls in pymupdf transitively.
    "pymupdf4llm>=0.3.4",
    # Deterministic, offline language identification (ISO-639-1) over already-
    # extracted text. Pure-Python + numpy; used by scraper.lang for both extractors.
    "py3langid>=0.3",
]

[project.scripts]
dhbw-scraper = "scraper.cli:main"

[project.optional-dependencies]
# pre-commit drives the git hooks (lint/format on commit, Conventional-Commit
# validation, tests on push) declared in .pre-commit-config.yaml. `ruff` is pinned
# here too so CI's `uv run ruff …` steps resolve the SAME version the
# `ruff-pre-commit` hook manages (rev v0.8.6) — bump both in lockstep or the two
# ruffs can format the corpus differently.
dev = ["pytest>=9.0", "maturin>=1.7,<2", "pre-commit>=4", "ruff==0.15.22"]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
# Mixed Rust/Python layout, one source root: the pure-Python package tree stays
# authoritative under src/scraper/, and the Rust crate at src/scrape-engine/ is
# injected as the single submodule scraper._engine. The Rust is a SIBLING of the
# package, not nested inside it — anything under the package dir is the wheel
# payload and would ship .rs files into site-packages.
python-source = "src"
module-name = "scraper._engine"
features = ["pyo3/extension-module"]
# Ship vendored, inlined browser assets (d3 for the report's discovery tree) in the
# wheel. dashboard.py reads them at runtime via __file__; the editable dev install
# resolves that to the source tree, but a built wheel needs them declared here.
include = ["src/scraper/vendor/*.js"]

# Ruff's formatter (and linter) auto-discover this section from pyproject.toml no
# matter how ruff is invoked — the pre-commit `ruff-format` hook, CI's
# `ruff format --check`, or a bare `ruff format` — so every entry point produces
# byte-for-byte identical output. Every value below equals ruff's current default;
# they are pinned so an upstream default change can never silently reflow the corpus.
[tool.ruff]
line-length = 88
# target-version is deliberately unset: ruff infers it from the single source of
# truth, project.requires-python (>=3.14). Pinning it here would add a second
# Python-version knob that could drift out of sync with requires-python.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"          # per-file detection — friendly to mixed CRLF/LF checkouts
skip-magic-trailing-comma = false
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["tests"]
